Fixed Spacing

--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ h1 {
     font-size: 20px;
 }
 
+.bullet-box{
+    padding: 0px 20px;
+}
+
 .horizontal-section2 {
     display: flex;
     justify-content: center;
